# font-manager

./: .gitattributes  .gitignore  CHANGELOG  COPYING  ChangeLog  Flags.mk  INSTALL  Makefile.am  Makefile.in  README  README.md  README.ro.md  TODO  aclocal.m4  autogen.sh  com.github.FontManager.Fontmanager.yaml  config.h.meson  config.vapi  configure  configure.ac  meson.build  meson_dist.py  meson_options.txt  meson_post_install.py  org.gnome.FontManager.yaml  release
data/: ApplicationMenu.ui  FontManager.css  FontManagerGResource.xml  Makefile.am  com.github.FontManager.FontManager.SearchProvider.ini  com.github.FontManager.FontManager.appdata.xml.in.in  com.github.FontManager.FontManager.desktop.in.in  com.github.FontManager.FontManager.gschema.xml  com.github.FontManager.FontViewer.appdata.xml.in.in  com.github.FontManager.FontViewer.desktop.in.in  com.github.FontManager.FontViewer.gschema.xml  font-manager.aap.in  meson.build  org.gnome.FontManager.SearchProvider.ini  org.gnome.FontManager.appdata.xml.in  org.gnome.FontManager.appdata.xml.in.in  org.gnome.FontManager.desktop.in  org.gnome.FontManager.desktop.in.in  org.gnome.FontManager.gschema.xml  org.gnome.FontViewer.appdata.xml.in  org.gnome.FontViewer.appdata.xml.in.in  org.gnome.FontViewer.desktop.in  org.gnome.FontViewer.desktop.in.in  org.gnome.FontViewer.gschema.xml
data/ui/: font-manager-alias-row.ui  font-manager-character-map.ui  font-manager-font-config-controls.ui  font-manager-font-list-pane.ui  font-manager-labeled-spin-button.ui  font-manager-labeled-switch.ui  font-manager-language-filter-settings.ui  font-manager-language-popover.ui  font-manager-license-pane.ui  font-manager-main-window.ui  font-manager-orthography-list-box-row.ui  font-manager-orthography-list.ui  font-manager-preferences.ui  font-manager-preview-controls.ui  font-manager-preview-pane.ui  font-manager-properties-pane.ui  font-manager-reactive-label.ui  font-manager-shortcuts-window.ui  font-manager-standard-sidebar.ui  font-manager-substitute.ui  font-viewer-main-window.ui  shortcuts.ui
docs/: font-manager.xml  font-manager.xml.in  meson.build
extensions/: Makefile.am  Makefile.in  README  README.md  extension-common.h  meson.build  meson_post_install.py
extensions/Nautilus/: font-manager.py
extensions/Nemo/: font-manager.py
extensions/Thunar/: font-manager.py
extensions/nautilus/: font-manager-menu-provider.c  font-manager-menu-provider.h  meson.build  nautilus-font-manager-module.c
extensions/nemo/: font-manager-menu-provider.c  font-manager-menu-provider.h  meson.build  nemo-font-manager-module.c
extensions/thunar/: font-manager-extension-utils.c  font-manager-extension-utils.h  font-manager-menu-provider.c  font-manager-menu-provider.h  font-manager-renamer-provider.c  font-manager-renamer-provider.h  meson.build  thunar-font-manager-module.c
help/: HEADER  LINGUAS  Makefile.am  Makefile.in  font-manager.1.in  font-manager.pot  meson.build
help/C/: font-manager-CLI.page  font-manager-activating.page  font-manager-addremove.page  font-manager-browsing.page  font-manager-categories.page  font-manager-category.page  font-manager-character-map.page  font-manager-charmap.page  font-manager-collection.page  font-manager-collections.page  font-manager-compare.page  font-manager-font-activation.page  font-manager-font-installation.page  font-manager-font-removal.page  font-manager-font-sources.page  font-manager-fontconfig.page  font-manager-fontlist.page  font-manager-introduction.page  font-manager-license.page  font-manager-metadata.page  font-manager-orthographies.page  font-manager-preferences.page  font-manager-preview.page  font-manager-search.page  font-manager-substitutions.page  font-manager-supported-formats.page  font-manager.pot  fontconfig.page  fontinfo.page  index.page  install.page  preview.page  remove.page  ui.page
help/am/: am.po
help/ar/: ar.po
help/ca/: ca.po
help/de/: de.po
help/en_US/: en_US.po
help/eo/: eo.po
help/es/: es.po
help/fr/: fr.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/nb_NO/: nb_NO.po
help/nl/: nl.po
help/oc/: oc.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sv/: sv.po
help/ta/: ta.po
help/tr/: tr.po
help/uk/: uk.po
help/zgh/: zgh.po
help/zh_Hans/: zh_Hans.po
help/zh_Hant/: zh_Hant.po
help/zh_Hant_HK/: zh_Hant_HK.po
lib/: FontManager.css  Makefile.am  ValaSources.mk  font-manager.metadata  font-manager.vala  gresources.xml  meson.build
lib/Common/: About.vala.in  ArchiveManager.vala  Cacheable.vala  Collections.vala.in  (+9 more)
po/: HEADER  LINGUAS  Makevars  Makevars.in  POTFILES.in  POTFILES.readme  POTFILES.skip  am.po  ar.po  ca.po  compile_translations.py  de.po  de_DE.po  eo.po  es.po  font-manager.pot  fr.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  meson.build  messages.pot  nb_NO.po  nl.po  oc.po  pl.po  pogen.sh  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sl.po  sv.po  ta.po  tr.po  (+5 more)
resources/: FontManager.css  FontManagerGResource.xml  Makefile.am  Makefile.in  font-manager.appdata.xml.in  font-manager.desktop  org.gnome.FontManager.appdata.xml.in  org.gnome.FontManager.desktop.in  org.gnome.FontManager.gschema.xml
src/: Application.vala  Flags.mk  FontManager.py  Main.vala  Makefile.am  Makefile.in  common.py  config.py  config.py.in.in  constants.py.in.in  export.py  fm_collections.py  font-manager.desktop  font-manager.in  font-sampler.in  fontload.py  fontviews.py  main.py  managed.py  meson.build  preferences.py  sampler.py  treeviews.py  xmlutils.py
test/: custom.css  gresources.xml  meson.build  test-application.c  test-application.h.in  tests.json  updatedb.vala
tests/: Makefile.am  TestCase.vala  TestFontConfig.vala  TestMain.vala  TestUtils.vala  ValaSources.mk  fonts.dtd  meson.build  sources.dtd
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  release
(+1618 files in other folders)
